--- a/portfolio-details-01.html
+++ b/portfolio-details-01.html
@@ -122,7 +122,7 @@
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: JavaScript</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">https://codepen.io/DP_mAn/full/bGdLvYa</a></li>
+                <li><strong>Project URL</strong>: <a href="https://codepen.io/DP_mAn/full/bGdLvYa">https://codepen.io/DP_mAn/full/bGdLvYa</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
