--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -122,7 +122,7 @@
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: CSS</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">https://codepen.io/DP_mAn/pen/QWbBdZG</a></li>
+                <li><strong>Project URL</strong>: <a href="https://codepen.io/DP_mAn/pen/QWbBdZG">https://codepen.io/DP_mAn/pen/QWbBdZG</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
