--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/darsh-2.jpg" alt="profile picture" class="img-fluid rounded-circle">
+        <img src="assets/img/professional-profile-picture.jpg" alt="profile picture" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Darsh Patel</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
