--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-<!--             <img src="assets/img/darsh-2.jpg" class="img-fluid" alt=""> -->
-          </div>
+<!--           <div class="col-lg-4" data-aos="fade-right">
+            <img src="assets/img/darsh-2.jpg" class="img-fluid" alt="">
+          </div> -->
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Front End Developer</h3>
             <p class="fst-italic"></p>
@@ -115,11 +115,11 @@
                 </ul>
               </div>
             </div>
-            <p>
+<!--             <p>
               Skilled front end developer. Comfortable in designing front-end.Experienced with HTML,CSS, JavaScript and
               React.
               Have easy hand on backend technology like PHP and MongoDB.
-            </p>
+            </p> -->
           </div>
         </div>
 
