--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="profile">
         <img src="assets/img/professional-profile-picture.jpg" alt="profile picture" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Darsh </a></h1>
+        <h1 class="text-light"><a href="index.html">Darsh Patel</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
