--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="row">
-<!--           <div class="col-lg-4" data-aos="fade-right">
+          <!--           <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/darsh-2.jpg" class="img-fluid" alt="">
           </div> -->
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
@@ -115,7 +115,7 @@
                 </ul>
               </div>
             </div>
-<!--             <p>
+            <!--             <p>
               Skilled front end developer. Comfortable in designing front-end.Experienced with HTML,CSS, JavaScript and
               React.
               Have easy hand on backend technology like PHP and MongoDB.
@@ -253,13 +253,13 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Education</h2>
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+          <!-- <div class="col-lg-6" data-aos="fade-up">
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Darsh Patel</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
@@ -271,8 +271,9 @@
                 <li>dpatel7753@conestogac.on.ca</li>
               </ul>
             </div>
-
-            <h3 class="resume-title">Education</h3>
+          </div> -->
+          <div class="col-lg-6" data-aos="fade-up">
+            <!-- <h3 class="resume-title">Education</h3> -->
             <div class="resume-item">
               <h4>Master in Web Design &amp; Development</h4>
               <h5>2020 - 2021</h5>
@@ -280,6 +281,8 @@
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
                 ut dignissimos deleniti nerada porti sand markend</p>
             </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up">
             <div class="resume-item">
               <h4>Bachelor in Information Technology </h4>
               <h5>2016 - 2019</h5>
@@ -289,7 +292,7 @@
                 dila</p>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Junior Front End Developer</h4>
@@ -317,7 +320,7 @@
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
@@ -351,8 +354,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/P-1.1.JPG" class="img-fluid" alt="P-1 picture">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/P-1.1.JPG" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/P-1.1.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                    class="bx bx-plus"></i></a>
                 <a href="portfolio-details-01.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -362,8 +365,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/P-2.1.JPG" class="img-fluid" alt="P-2 picture">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/P-2.1.JPG" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/P-2.1.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                    class="bx bx-plus"></i></a>
                 <a href="portfolio-details-02.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -373,8 +376,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/P-3.1.JPG" class="img-fluid" alt="P-3 picture">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/P-3.2.JPG" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/P-3.2.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details-03.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
