About section changes

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 April 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.darshp.org</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 April 1998</span></li> -->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://my-portfolio25.netlify.app/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 905-867-1471</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kitchener, ON</span></li>
                 </ul>
@@ -108,9 +108,9 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Web Design and Development</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email on:</strong>
-                    <span>dpatel7753@conestogac.on.ca</span></li>
+                    <span>darshp32774@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
