--- a/index.html
+++ b/index.html
@@ -278,8 +278,7 @@
               <h4>Master in Web Design &amp; Development</h4>
               <h5>2020 - 2021</h5>
               <p><em>Conestoga College, Kitchener, ON</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
+              <p> Got skilled in the front-end technologies such as, JavaScript, React, Wordpress and also learned back-end tech like Node.js and express and PHP.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
@@ -287,9 +286,7 @@
               <h4>Bachelor in Information Technology </h4>
               <h5>2016 - 2019</h5>
               <p><em>Sarvajanik College of Engineering, Surat, Gujarat</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <p> Learned the basics of computer science. Got primary knowledge in every branch of computer, i.g. C++, Java, .NET, HTML/CSS, JavaScript, Android etc.</p>
             </div>
           </div>
           <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
