--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Web Design and Development</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email on:</strong>
                     <span>darshp32774@gmail.com</span></li>
