--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 April 1998</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://my-portfolio25.netlify.app/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                    <span>https://my-portfolio25.netlify.app/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 905-867-1471</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kitchener, ON</span></li>
                 </ul>
@@ -108,7 +109,8 @@
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Web Design and Development</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Web Design and
+                      Development</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email on:</strong>
                     <span>darshp32774@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -278,7 +280,8 @@
               <h4>Master in Web Design &amp; Development</h4>
               <h5>2020 - 2021</h5>
               <p><em>Conestoga College, Kitchener, ON</em></p>
-              <p> Got skilled in the front-end technologies such as, JavaScript, React, Wordpress and also learned back-end tech like Node.js and express and PHP.</p>
+              <p> Got skilled in the front-end technologies such as, JavaScript, React, Wordpress and also learned
+                back-end tech like Node.js and express and PHP.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
@@ -286,7 +289,8 @@
               <h4>Bachelor in Information Technology </h4>
               <h5>2016 - 2019</h5>
               <p><em>Sarvajanik College of Engineering, Surat, Gujarat</em></p>
-              <p> Learned the basics of computer science. Got primary knowledge in every branch of computer, i.g. C++, Java, .NET, HTML/CSS, JavaScript, Android etc.</p>
+              <p> Learned the basics of computer science. Got primary knowledge in every branch of computer, i.g. C++,
+                Java, .NET, HTML/CSS, JavaScript, Android etc.</p>
             </div>
           </div>
           <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -329,7 +333,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p> So here is my presentation of my work through my teaching career. In this portfolio you will see combination of many technologies. I hope you enjoy this.  </p>
+          <p> So here is my presentation of my work through my teaching career. In this portfolio you will see
+            combination of many technologies. I hope you enjoy this. </p>
         </div>
 
         <!-- <div class="row" data-aos="fade-up">
@@ -358,10 +363,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/P-2.1.JPG" class="img-fluid" alt="P-2 picture">
+              <img src="assets/img/portfolio/recipe-1.JPG" class="img-fluid" alt="P-2 picture">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/P-2.1.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
-                    class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/recipe-2.JPG" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/recipe-3.JPG" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details-02.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
