Chatus dp change

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/P-3.1.JPG" class="img-fluid" alt="P-3 picture">
+              <img src="assets/img/portfolio/chatus-1.JPG" class="img-fluid" alt="P-3 picture">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/P-3.2.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="App 2"><i class="bx bx-plus"></i></a>
