recipe app update

--- a/index.html
+++ b/index.html
@@ -367,8 +367,6 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/recipe-2.JPG" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                <a href="assets/img/portfolio/recipe-3.JPG" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details-02.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -676,7 +674,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>DarshPatel</span></strong>
+        &copy;<strong><span>DarshPatel</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
