--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -99,15 +99,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/P-2.1.JPG" alt="P-2 first picture ">
+                  <img src="assets/img/portfolio/recipe-1.JPG" alt="P-2 first picture ">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/P-2.2.JPG" alt="P-2 second picture">
+                  <img src="assets/img/portfolio/recipe-2.JPG" alt="P-2 second picture">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/P-2.3.JPG" alt="P-2 third picture">
+                  <img src="assets/img/portfolio/recipe-3.JPG" alt="P-2 third picture">
                 </div>
 
               </div>
@@ -120,15 +120,15 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: CSS</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://codepen.io/DP_mAn/pen/QWbBdZG">https://codepen.io/DP_mAn/pen/QWbBdZG</a></li>
+                <li><strong>Client</strong>: CSS/ JavaScript</li>
+                <li><strong>Project date</strong>: 01 May, 2021</li>
+                <li><strong>Project URL</strong>: <a href="https://recipe-app-25.netlify.app/">recipe-app-25</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example CSS</h2>
+              <h2>This is an example fine JavaScript</h2>
               <p>
-                This is the simple animated CSS project. In which you can see the color combination of different theme i.e. Ocean, Forest and Fire.
+                This is recipe app in which you can search recipe from the API and it will show you the how to make this recipe and also the necessary ingrediants. You can also save your favourite recipe to the top.
               </p>
             </div>
           </div>
@@ -144,7 +144,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>DarshPatel</span></strong>
+        &copy;<strong><span>DarshPatel</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
