--- a/portfolio-details-02.html
+++ b/portfolio-details-02.html
@@ -122,7 +122,7 @@
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: CSS/ JavaScript</li>
                 <li><strong>Project date</strong>: 01 May, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://recipe-app-25.netlify.app/">recipe-app-25</a></li>
+                <li><strong>Project URL</strong>: <a href="https://recipe-app-25.netlify.app/" target="_blank">recipe-app-25</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
