--- a/portfolio-details-03.html
+++ b/portfolio-details-03.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -117,8 +117,8 @@
               <ul>
                 <li><strong>Category</strong>: React Web app</li>
                 <li><strong>Client</strong>: React</li>
-                <li><strong>Project date</strong>: 01 March, 2021</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project date</strong>: 01 April, 2021</li>
+                <li><strong>Project URL</strong>: <a href="https://chat-us-2021.netlify.app/" target="_blank">ChatUS-app</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -140,7 +140,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>DarshPatel</span></strong>
+        &copy; <strong><span>DarshPatel</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
