--- a/portfolio-details-03.html
+++ b/portfolio-details-03.html
@@ -99,7 +99,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/P-3.1.JPG" alt="P-3 first picture">
+                  <img src="assets/img/portfolio/chatus-1.JPG" alt="P-3 first picture">
                 </div>
 
                 <div class="swiper-slide">
