social media update

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <img src="assets/img/professional-profile-picture.jpg" alt="profile picture" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Darsh Patel</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+          <a href="https://www.linkedin.com/in/darsh-patel-1b2713135/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
