email update - contact

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>dpatel7753@conestogac.on.ca</p>
+                <p>darshp32774@gmail.com</p>
               </div>
 
               <div class="phone">
