--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-          <a href="https://www.linkedin.com/in/darsh-patel-1b2713135/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/darsh-patel-1b2713135/" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -634,7 +635,7 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/email.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -654,13 +655,44 @@
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
               <div class="text-center"><button type="submit" name="sendMailBtn">Send Message</button></div>
             </form>
+          </div> -->
+
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card card-signin my-5">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Send Email</h5>
+                    <form action="email-script.php" method="post" class="form-signin">
+                      <div class="form-label-group">
+                        <label for="inputEmail">From <span style="color: #FF0000">*</span></label>
+                        <input type="text" name="fromEmail" id="fromEmail" class="form-control"
+                          value="info@codingbirdsonline.com" readonly required autofocus>
+                      </div> <br />
+                      <div class="form-label-group">
+                        <label for="inputEmail">To <span style="color: #FF0000">*</span></label>
+                        <input type="text" name="toEmail" id="toEmail" class="form-control" placeholder="Email address"
+                          required autofocus>
+                      </div> <br />
+                      <label for="inputPassword">Subject <span style="color: #FF0000">*</span></label>
+                      <div class="form-label-group">
+                        <input type="text" id="subject" name="subject" class="form-control" placeholder="Subject"
+                          required>
+                      </div><br />
+                      <label for="inputPassword">Message <span style="color: #FF0000">*</span></label>
+                      <div class="form-label-group">
+                        <textarea id="message" name="message" class="form-control" placeholder="Message"
+                          required></textarea>
+                      </div> <br />
+                      <button type="submit" name="sendMailBtn"
+                        class="btn btn-lg btn-primary btn-block text-uppercase">Send Email</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
         </div>
