--- a/index.html
+++ b/index.html
@@ -659,8 +659,8 @@
             </form>
           </div> -->
 
-          <div class="container">
-            <div class="row">
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <div>
               <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                 <div class="card card-signin my-5">
                   <div class="card-body">
