--- a/index.html
+++ b/index.html
@@ -658,39 +658,32 @@
               <div class="text-center"><button type="submit" name="sendMailBtn">Send Message</button></div>
             </form>
           </div> -->
+
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <div class="card card-signin my-5">
-              <div class="card-body">
-                <h5 class="card-title text-center">Send Email</h5>
-                <form action="email-script.php" method="post" class="form-signin">
-                  <div class="form-label-group">
-                    <label for="inputEmail">From <span style="color: #FF0000">*</span></label>
-                    <input type="text" name="fromEmail" id="fromEmail" class="form-control"
-                      value="info@codingbirdsonline.com" readonly required autofocus>
-                  </div> <br />
-                  <div class="form-label-group">
-                    <label for="inputEmail">To <span style="color: #FF0000">*</span></label>
-                    <input type="text" name="toEmail" id="toEmail" class="form-control" placeholder="Email address"
-                      required autofocus>
-                  </div> <br />
-                  <label for="inputPassword">Subject <span style="color: #FF0000">*</span></label>
-                  <div class="form-label-group">
-                    <input type="text" id="subject" name="subject" class="form-control" placeholder="Subject" required>
-                  </div><br />
-                  <label for="inputPassword">Message <span style="color: #FF0000">*</span></label>
-                  <div class="form-label-group">
-                    <textarea id="message" name="message" class="form-control" placeholder="Message"
-                      required></textarea>
-                  </div> <br />
-                  <button type="submit" name="sendMailBtn" class="btn btn-lg btn-primary btn-block text-uppercase">Send
-                    Email</button>
-                </form>
-              </div>
-            </div>
+            <form action="email-script.php" method="post" class="form-signin">
+              <div class="form-label-group">
+                <label for="inputEmail">From <span style="color: #FF0000">*</span></label>
+                <input type="text" name="fromEmail" id="fromEmail" class="form-control"
+                  value="info@codingbirdsonline.com" readonly required autofocus>
+              </div> <br />
+              <div class="form-label-group">
+                <label for="inputEmail">To <span style="color: #FF0000">*</span></label>
+                <input type="text" name="toEmail" id="toEmail" class="form-control" placeholder="Email address" required
+                  autofocus>
+              </div> <br />
+              <label for="inputPassword">Subject <span style="color: #FF0000">*</span></label>
+              <div class="form-label-group">
+                <input type="text" id="subject" name="subject" class="form-control" placeholder="Subject" required>
+              </div><br />
+              <label for="inputPassword">Message <span style="color: #FF0000">*</span></label>
+              <div class="form-label-group">
+                <textarea id="message" name="message" class="form-control" placeholder="Message" required></textarea>
+              </div> <br />
+              <button type="submit" name="sendMailBtn" class="btn btn-lg btn-primary btn-block text-uppercase">Send
+                Email</button>
+            </form>
           </div>
         </div>
-
-      </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
