--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/email.php" method="post" role="form" class="php-email-form">
+            <!-- <form action="forms/email.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -656,7 +656,7 @@
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="text-center"><button type="submit" name="sendMailBtn">Send Message</button></div>
-            </form>
+            </form> -->
           </div>
         </div>
     </section><!-- End Contact Section -->
