--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch shadow p-3 mb-5 bg-white rounded">
             <form action="email-script.php" method="post" class="form-signin">
               <div class="form-label-group">
                 <label for="inputEmail">From <span style="color: #FF0000">*</span></label>
