--- a/index.html
+++ b/index.html
@@ -640,12 +640,12 @@
               <div class="form-label-group">
                 <label for="inputEmail">From <span style="color: #FF0000">*</span></label>
                 <input type="text" name="fromEmail" id="fromEmail" class="form-control"
-                  value="info@codingbirdsonline.com" readonly required autofocus>
+                  value="info@codingbirdsonline.com" readonly required>
               </div> <br />
               <div class="form-label-group">
                 <label for="inputEmail">To <span style="color: #FF0000">*</span></label>
-                <input type="text" name="toEmail" id="toEmail" class="form-control" placeholder="Email address" required
-                  autofocus>
+                <input type="text" name="toEmail" id="toEmail" class="form-control" placeholder="Email address"
+                  required>
               </div> <br />
               <label for="inputPassword">Subject <span style="color: #FF0000">*</span></label>
               <div class="form-label-group">
