--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch shadow p-3 mb-5 bg-white rounded">
+          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch shadow p-3 mb-5 bg-white rounded">
             <form action="email-script.php" method="post" class="form-signin">
               <div class="form-label-group">
                 <label for="inputEmail">From <span style="color: #FF0000">*</span></label>
@@ -657,27 +657,6 @@
               </div> <br />
               <button type="submit" name="sendMailBtn" class="btn btn-lg btn-primary btn-block text-uppercase">Send
                 Email</button>
-            </form>
-            <!-- <form action="forms/email.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="text-center"><button type="submit" name="sendMailBtn">Send Message</button></div>
             </form> -->
           </div>
         </div>
