--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="offset-3 col-lg-6 d-flex align-items-center">
+          <div class="offset-md-3 col-lg-6 d-flex align-items-center">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
