--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>As you can se below, I'm very fluent with the front end technology i.e. html,css,JavaScript and WordPress
+          <p>As you can se below, I'm very fluent with the front end technology i.e. html,css,JAVA,JavaScript and WordPress
             also I'm comfortable with php. </p>
         </div>
 
@@ -221,7 +221,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">JAVA <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -237,7 +237,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">70%</i></span>
+              <span class="skill">PHP <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
                 </div>
