--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>As you can se below, I'm very fluent with the front end technology i.e. html,css,JAVA,JavaScript and WordPress
-            also I'm comfortable with php. </p>
+          <p>As you can se below, I'm very fluent with the front end technology i.e. Html, Css, JAVA, JavaScript, WordPress and also I'm comfortable with php. </p>
         </div>
 
         <div class="row skills-content">
